[gd_scene load_steps=3 format=3 uid="uid://dqhuxaesu28lb"]

[ext_resource type="FontFile" uid="uid://ct8xlyjlgpms5" path="res://assets/fonts/RAVIE.TTF" id="1_7v1g0"]
[ext_resource type="Script" path="res://scenes/vault/hack/homeless.gd" id="1_km35f"]

[node name="homeless" type="Node2D"]
script = ExtResource("1_km35f")

[node name="Label" type="Label" parent="."]
offset_right = 1920.0
offset_bottom = 223.0
theme_override_fonts/font = ExtResource("1_7v1g0")
theme_override_font_sizes/font_size = 80
text = "you are now homeless"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="."]
offset_left = 230.0
offset_top = 400.0
offset_right = 737.0
offset_bottom = 695.0
theme_override_fonts/font = ExtResource("1_7v1g0")
theme_override_font_sizes/font_size = 40
text = "get a job, 
make money,
get a raise,
make more money,
save money,
buy a house,
become rich,
"

[node name="Button2" type="Button" parent="."]
offset_left = 1300.0
offset_top = 475.0
offset_right = 1600.0
offset_bottom = 610.0
theme_override_fonts/font = ExtResource("1_7v1g0")
theme_override_font_sizes/font_size = 40
text = "accept
fate"

[node name="Button3" type="Button" parent="."]
visible = false
offset_left = 1300.0
offset_top = 250.0
offset_right = 1600.0
offset_bottom = 385.0
theme_override_fonts/font = ExtResource("1_7v1g0")
theme_override_font_sizes/font_size = 40
text = "accept
fate"

[node name="Button4" type="Button" parent="."]
visible = false
offset_left = 1300.0
offset_top = 700.0
offset_right = 1600.0
offset_bottom = 835.0
theme_override_fonts/font = ExtResource("1_7v1g0")
theme_override_font_sizes/font_size = 40
text = "accept
fate"

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 1300.0
offset_top = 475.0
offset_right = 1600.0
offset_bottom = 610.0
theme_override_fonts/font = ExtResource("1_7v1g0")
theme_override_font_sizes/font_size = 40
text = "nuh uh"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
visible = false
offset_left = 1300.0
offset_top = 250.0
offset_right = 1600.0
offset_bottom = 385.0
theme_override_fonts/font = ExtResource("1_7v1g0")
theme_override_font_sizes/font_size = 40
text = "nuh uh"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
